Fixed up 'small' size misalignment

--- a/css/w3w-glyphicon.css
+++ b/css/w3w-glyphicon.css
@@ -129,6 +129,10 @@
     font-size: 20px;
 }
 
+.w3w-embed.w3w-small .w3w-address {
+    font-size: 16px;
+}
+
 
 /* medium */
 
